--- a/styles/blog.css
+++ b/styles/blog.css
@@ -44,7 +44,7 @@ body{
 
 /* Judul Artikel */
 
-.marginheadertojudul{
+.marginheader{
     height: 127px;
 }
 
